# AutomaSploit

./: Cargo.toml  scan_result
src/: code.rs  main.rs  screen.txt  vulnerabilities.rs
