[package]
name = "automasploit"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
indicatif = "0.17.8"
futures = "0.3.31"
anyhow = "1.0.90"
dialoguer = "0.10.4"
clap = { version = "4.3", features = ["derive"] }
